--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,7 @@ workflows:
     jobs:
       - cypress/run:
           start: npm start
-          spec:
-            - cypress/integration/index.test.js
+          spec: cypress/integration/index.test.js
           post-steps:
             - store_test_results:
                 path: ./reports/junit
